[package]
name = "script-utils"
version = "0.1.0"
edition = "2018"
authors = ["Dominik Gschwind <dominik.gschwind99@gmail.com>"]
description = "Utilities for rust scripting"
repository = "https://github.com/n3xed/script-utils"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
downloader = { version = "0.2.6", features = ["tui", "verify"] }
log = "0.4.14"
simplelog = "0.10.0"